Index page buttons will no longer get cut off on certain web browsers.

--- a/Fishbowl_Server/web/entries.css
+++ b/Fishbowl_Server/web/entries.css
@@ -9,7 +9,6 @@ header{
 
 .typeField {
     font-size: 25px;
-    width: auto;
 }
 
 .submitButton {
